# kdn-drl

./: .gitignore  README.md  datanetapi.md  main.py  pyproject.toml  requirements.txt
.agent/rules/: tools.md
data/geant2bw/: Network_geant2bw.ned
notebook/: kdn-drl.ipynb
scripts/: analyze_opt_vs_sp.py  analyze_path_len.py  benchmark_mlu.py  train_maskppo.py  train_ppo.py  tune_gcn.py
src/: benchmark.py  datanet.py  deflation_env.py  deflection_env.py  env.py  gat.py  gcn.py  kdn.py  masked_env.py  trainer.py
tests/: test_action_masking.py  test_cycles.py  test_deflation_env.py  test_deflection_env.py  test_env.py  test_gat.py  test_gcn.py  test_kdn_mlu.py  test_oracle.py
